# url-checker

./: .gitignore  Cargo.toml  LICENSE  README.md  index.html  urls.txt
gui/: INSTALL_LINUX.md  QUICKSTART.md  README.md  START.md  index.html  install-deps.sh  kill-port.sh  package.json  vite.config.js
gui/src/: main.js  styles.css
gui/src-tauri/: Cargo.toml
gui/src-tauri/icons/: icon.icns
gui/src-tauri/src/: main.rs
src/: main.rs
