[package]
name = "url-checker"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
csv = "1.3"
futures = "0.3"
reqwest = { version = "0.11", features = ["json", "gzip", "brotli", "deflate", "stream", "rustls-tls"] }
tokio = { version = "1.37", features = ["full"] }
colored = "2.1"
indicatif = "0.17"
serde = { version = "1.0", features = ["derive"] }
