[package]
name = "url-checker-gui"
version = "0.1.0"
description = "Professional URL Checker - Desktop GUI Application"
authors = ["dorofi <dorofii.2005@gmail.com>"]
license = "MIT"
repository = "https://github.com/dorofi/url-checker"
edition = "2021"

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[dependencies]
tauri = { version = "1.5", features = [ "fs-read-file", "fs-write-file", "fs-read-dir", "shell-open"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.37", features = ["full"] }
reqwest = { version = "0.11", default-features = false, features = ["json", "rustls-tls"] }
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1.0"

[features]
# This feature is used for production builds or when a dev server is not specified, DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]

